# tokencount

./: .gitignore  Makefile  README.md  counts.py  main.py  pyproject.toml  test_main.py
.github/workflows/: ci.yml
scripts/: bump.sh  count_references.py  release.sh
