[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokencount"
version = "0.2.2"
description = "Token counter CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tiktoken>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
tc = "main:main"

[dependency-groups]
dev = [
    "black>=24.0.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pyright]
exclude = ["extra", "venv", ".venv"]

[tool.black]
extend-exclude = "(extra|venv)"
